# vibe-coding-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: README.md  code-style.mdc  development.mdc
.github/workflows/: python-ci.yml
src/my_package/: __init__.py  _version.py  cli.py  core.py  settings.py
tests/: conftest.py  test_cli.py  test_core.py  test_settings.py
